--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: Jihwan's Blog
 email: jhkim105@gmail.com
 author: Jihwan Kim
 url: 
-resume_site: 
+resume_site: https://www.linkedin.com/in/jihwan-kim-b3866399/
 github: https://github.com/jhkim105/
 baseurl: ""
 description: About Software Development And Maintenance
